overflow fixed

--- a/css/main.css
+++ b/css/main.css
@@ -260,7 +260,7 @@ footer a:hover{
 
     .hero{
         width: 100vw;
-        height: 80vh;
+        height: 100vh;
         /* background-color: #E0BBD3; */
         display: flex;
         flex-direction: column;
@@ -270,12 +270,11 @@ footer a:hover{
     }
 
     .hero-background{
-        background: url('../images/pictures/hero-mobile.png') 0 0 no-repeat;
+        /* background: url('../images/pictures/hero-mobile.png') 0 0 no-repeat; */
         width: 100vw;
         height: 100vh;
         overflow: hidden;
     }
-
 
     .hero-text h1{
         font-size: 3rem;
